--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "3.3"
 install:
   - "pip install -r requirements.txt --use-mirrors"
-  - "pip isntall -r test_requirements.txt --use-mirrors"
+  - "pip install -r test_requirements.txt --use-mirrors"
 script: nosetests
