--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ python:
 install:
   - "pip install -r requirements.txt --use-mirrors"
   - "pip install -r test_requirements.txt --use-mirrors"
+  - "pip install pydes --use-mirrors"
 script: nosetests
