--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install:
   - "pip install -r requirements.txt --use-mirrors"
   - "pip install -r test_requirements.txt --use-mirrors"
+  - "pip install -r test_requirements26.txt --use-mirrors || exit"
   - "pip install pydes --use-mirrors"
 script: nosetests
