--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.4"
   - "3.5"
 install:
-  - "pip install -r requirements.txt --use-mirrors"
-  - "pip install -r test_requirements.txt --use-mirrors"
-  - "pip install -r test_requirements26.txt --use-mirrors; true"
+  - "pip install -r requirements.txt"
+  - "pip install -r test_requirements.txt"
+  - "pip install -r test_requirements26.txt; true"
 script: nosetests
