testing: more variables pass through for tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ envlist = py27,py33,py34,py35,pypy
 [testenv]
 deps=nose
 commands=nosetests
-passenv = HOST
+passenv = HOST DATABASE SQLUSER SQLPASSWORD NTLM_USER NTLM_PASSWORD
