add junit configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,4 +40,8 @@ before_test:
 
 
 test_script:
-  - pytest -v
+  - pytest -v --junitxml=junit-results.xml
+  - ps: |
+      xunit.console .\path\to\test-assembly.dll /xml .\xunit-results.xml
+      $wc = New-Object 'System.Net.WebClient'
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\junit-results.xml))
