--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,4 +43,4 @@ test_script:
   - pytest -v --junitxml=junit-results.xml
   - ps: |
       $wc = New-Object 'System.Net.WebClient'
-      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\junit-results.xml))
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$env:APPVEYOR_JOB_ID", (Resolve-Path .\junit-results.xml))
