--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,4 +45,4 @@ test_script:
       $wc = New-Object 'System.Net.WebClient'
       $url = "https://ci.appveyor.com/api/testresults/junit/$env:APPVEYOR_JOB_ID"
       Write-Output $url
-      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/", ".\junit-results.xml")
+      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/", ".\junit-results.xml");
