--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,5 +45,5 @@ test_script:
       $wc = New-Object 'System.Net.WebClient'
       $url = "https://ci.appveyor.com/api/testresults/junit/$env:APPVEYOR_JOB_ID"
       Write-Output $url
-      $wc.UploadFile($url, ".\junit-results.xml");
+      $wc.UploadFile($url, (Resolve-Path .\junit-results.xml));
       Write-Output $url
