--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,9 +19,7 @@ environment:
     - PYTHON: "C:\\Python36"
       SQLINSTANCE: SQL2012SP1
     - PYTHON: "C:\\Python36"
-      SQLINSTANCE: SQL2008SP4
-    - PYTHON: "C:\\Python36"
-      SQLINSTANCE: SQL2005SP4
+      SQLINSTANCE: SQL2008R2SP2
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
