--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,8 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
-  - pip install pytest pytest-cov codecov
-  - pip install -e .
+  - pip install -r requirements.txt
+  - pip install -r test_requirements.txt
 
 build_script:
   - python setup.py sdist
