--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-log_level=INFO
+log_level=DEBUG
+log_format=%(created)f %(filename)s %(lineno)d %(levelname)s %(message)s
+log_date_format=%H:%M:%S
