--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,17 +9,17 @@ environment:
   SQLPASSWORD: Password12!
   DATABASE: test
   matrix:
+    #- PYTHON: "C:\\Python38"
+    #  SQLINSTANCE: SQL2016
     - PYTHON: "C:\\Python37"
       SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python38"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python38-x64"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2014
-    - PYTHON: "C:\\Python38-x64"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2012SP1
-    - PYTHON: "C:\\Python38-x64"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2008R2SP2
 
 install:
