--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,15 +11,13 @@ environment:
   matrix:
     - PYTHON: "C:\\Python37"
       SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python35"
-      SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2014
-    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2012SP1
-    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37-x64"
       SQLINSTANCE: SQL2008R2SP2
 
 install:
