--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 log_level=DEBUG
 log_format=%(created)f %(filename)s %(lineno)d %(levelname)s %(message)s
 log_date_format=%H:%M:%S
+#addopts=--mypy
