Add mypy testing as part of Appveyor test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,7 @@ before_test:
 
 
 test_script:
+  - mypy src
   - pytest -v --junitxml=junit-results.xml --cov=./
   - ps: |
       $wc = New-Object 'System.Net.WebClient'
