--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ install:
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - choco install rust
+  - choco install openssl --version=1.1.1.2100
   - pip install -e .
   - pip install -r test_requirements.txt
 
