--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,8 @@ install:
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - choco install rust
-  - ps: Start-FileDownload 'http://slproweb.com/download/Win32OpenSSL-1_0_2a.exe'
-  - ps: msiexec /i Win32OpenSSL-1_0_2a.exe
+  - set INCLUDE=C:\OpenSSL-Win64\include;%INCLUDE%
+  - set LIB=C:\OpenSSL-Win64\lib;%LIB%
   - pip install -e .
   - pip install -r test_requirements.txt
 
