Trying to set OPENSSL_DIR environment variable

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ install:
   - choco install rust
   - set INCLUDE=C:\OpenSSL-Win64\include;%INCLUDE%
   - set LIB=C:\OpenSSL-Win64\lib;%LIB%
+  - set OPENSSL_DIR=C:\OpenSSL-Win64
   - pip install -e .
   - pip install -r test_requirements.txt
 
