--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ install:
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - choco install rust
   - set PATH=C:\MinGW\bin;%HomeDrive%%HomePath%\.cargo\bin;%PATH%
+  - dir %HomeDrive%%HomePath%
   - rustup target add i686-pc-windows-gnu
   - set INCLUDE=C:\OpenSSL-Win64\include;%INCLUDE%
   - set LIB=C:\OpenSSL-Win64\lib;%LIB%
