--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,8 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
-  - choco install rust
-  - set PATH=C:\MinGW\bin;%HomeDrive%%HomePath%\.cargo\bin;%PATH%
+  - choco install rust rustup.install
+  - set PATH=C:\MinGW\bin;%PATH%
   - dir %HomeDrive%%HomePath%
   - rustup target add i686-pc-windows-gnu
   - set INCLUDE=C:\OpenSSL-Win64\include;%INCLUDE%
