--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - choco install rust rustup.install
-  - set PATH=C:\MinGW\bin;%PATH%
+  - set PATH=C:\MinGW\bin;%HomeDrive%%HomePath%\.cargo\bin;%PATH%
   - dir %HomeDrive%%HomePath%
   - rustup target add i686-pc-windows-gnu
   - set INCLUDE=C:\OpenSSL-Win64\include;%INCLUDE%
