--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 
-os: Windows Server 2012 R2
+os: Visual Studio 2019
 
 environment:
   INAPPVEYOR: 1
@@ -9,16 +9,12 @@ environment:
   SQLPASSWORD: Password12!
   DATABASE: test
   matrix:
-    - PYTHON: "C:\\Python312"
-      SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python312-x64"
-      SQLINSTANCE: SQL2016
+    - PYTHON: "C:\\Python313"
+      SQLINSTANCE: SQL2019
+    - PYTHON: "C:\\Python313-x64"
+      SQLINSTANCE: SQL2019
     - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2014
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2012SP1
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2008R2SP2
+      SQLINSTANCE: SQL2017
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
