--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ install:
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
+  - pip uninstall -y python-tds
 
 build_script:
   - python setup.py sdist
