Update supported Python versions (#174)
* Update supported versions to reflect current state
* Update tests to use Python 3.12
* Update to newer instance type for testing
* Don't use editable installation
* Add setuptools to test requirements
* Make version conformant with PEP-0440
* Split test_invalid_parameters into individual tests
* Uninstall pytds as part of test run, since it is installed by dependency on sqlalchemy-pytds
* Add src to PYTHONPATH
* Disable NTLM tests when running on Python version which does not support MD4
* Disable test for recordtype row strategy when Python version does not define collection.Mapping class, which is deprecated

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 
-os: Windows Server 2012 R2
+os: Visual Studio 2019
 
 environment:
   INAPPVEYOR: 1
@@ -9,23 +9,20 @@ environment:
   SQLPASSWORD: Password12!
   DATABASE: test
   matrix:
-    - PYTHON: "C:\\Python38"
-      SQLINSTANCE: SQL2016
+    - PYTHON: "C:\\Python312"
+      SQLINSTANCE: SQL2019
+    - PYTHON: "C:\\Python312-x64"
+      SQLINSTANCE: SQL2019
     - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2016
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2014
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2012SP1
-    - PYTHON: "C:\\Python38-x64"
-      SQLINSTANCE: SQL2008R2SP2
+      SQLINSTANCE: SQL2017
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
-  - pip install -e .
+  - pip install -r requirements.txt
   - pip install -r test_requirements.txt
+  - pip uninstall -y python-tds
 
 build_script:
   - python setup.py sdist
@@ -43,6 +40,7 @@ before_test:
 test_script:
   - mypy src
   - ruff check src
+  - set PYTHONPATH=src
   - pytest -v --junitxml=junit-results.xml --cov=./
   - ps: |
       $wc = New-Object 'System.Net.WebClient'
