Fix AppVeyor build: Add vcredist140 to install required Visual C++ runtime
AppVeyor builds were failing due to missing dependencies required by the Microsoft ODBC Driver for SQL Server.

This commit adds `vcredist140` installation via Chocolatey to ensure the required runtime is available during CI.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ environment:
       SQLINSTANCE: SQL2017
 
 install:
+- choco install vcredist140 -y
   - choco install microsoft-odbc-driver-for-sql-server -y
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
