Fix AppVeyor CI failures by installing vcredist140 and SQL Server ODBC driver via Chocolatey with refreshenv
Fix AppVeyor CI failures by installing vcredist140 and SQL Server ODBC driver via Chocolatey

AppVeyor builds were failing due to missing Visual C++ runtime libraries
required by the Microsoft ODBC Driver for SQL Server.

This commit installs the required components via Chocolatey:
- vcredist140 (Visual C++ runtime)
- microsoft-odbc-driver-for-sql-server

It also adds `refreshenv` to reload environment variables after install, and
uses `--no-progress` to avoid issues in headless CI environments.

These changes ensure that the test environment is correctly set up during
CI builds, preventing runtime dependency errors.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,12 @@ environment:
       SQLINSTANCE: SQL2017
 
 install:
-- choco install vcredist140 -y
-  - choco install microsoft-odbc-driver-for-sql-server -y
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  - choco install vcredist140 -y --no-progress
+  - refreshenv
+  - choco install microsoft-odbc-driver-for-sql-server -y --no-progress
+  - 'SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%'
   - python --version
-  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
+  - 'python -c "import struct; print(struct.calcsize(\'P\') * 8)"'
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
   - pip uninstall -y python-tds
