Add Python 3.11, 3.12, and 3.13 configurations to AppVeyor matrix

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,12 @@ environment:
       SQLINSTANCE: SQL2017
     - PYTHON: "C:\\Python310-x64"
       SQLINSTANCE: SQL2019
+    - PYTHON: "C:\\Python311-x64"
+      SQLINSTANCE: SQL2017
+    - PYTHON: "C:\\Python312-x64"
+      SQLINSTANCE: SQL2017
+    - PYTHON: "C:\\Python313-x64"
+      SQLINSTANCE: SQL2017
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
