--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,10 +9,18 @@ environment:
   SQLPASSWORD: Password12!
   DATABASE: test
   matrix:
-    - PYTHON: "C:\\Python312"
+    - PYTHON: "C:\\Python310"
+      SQLINSTANCE: SQL2017
+    - PYTHON: "C:\\Python310-x64"
+      SQLINSTANCE: SQL2017
+    - PYTHON: "C:\\Python310-x64"
       SQLINSTANCE: SQL2019
+    - PYTHON: "C:\\Python311-x64"
+      SQLINSTANCE: SQL2017
     - PYTHON: "C:\\Python312-x64"
-      SQLINSTANCE: SQL2019
+      SQLINSTANCE: SQL2017
+    - PYTHON: "C:\\Python313-x64"
+      SQLINSTANCE: SQL2017
     - PYTHON: "C:\\Python38-x64"
       SQLINSTANCE: SQL2017
 
